.antlr/LispParser.java
// Generated from c:/Users/Dell/Desktop/Cp/Lisp.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LispParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, STRING=2, IF=3, DEFINE=4, LAMBDA=5, FUNCALL=6, WRITE=7, WRITE_LINE=8, 
		SETQ=9, DEFPARAMETER=10, DEFUN=11, PRINT=12, FORMAT=13, DOTIMES=14, COND=15, 
		AND=16, OR=17, NOT=18, CAR=19, CDR=20, CONS=21, ABS=22, LOG=23, GCD=24, 
		FLOOR=25, SIN=26, SINH=27, ROUND=28, ICM=29, T=30, NIL=31, LPAREN=32, 
		RPAREN=33, COMMENT=34, MULTILINE_COMMENT=35, PLUS=36, MINUS=37, MULTIPLY=38, 
		DIVIDE=39, EQUAL=40, LESS=41, GREATER=42, SYMBOL=43, NUMBER=44, WS=45;
	public static final int
		RULE_program = 0, RULE_expression = 1, RULE_list = 2, RULE_parameters = 3, 
		RULE_cond_branch = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "expression", "list", "parameters", "cond_branch"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'t'", null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "'('", "')'", null, null, 
			"'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "STRING", "IF", "DEFINE", "LAMBDA", "FUNCALL", "WRITE", "WRITE_LINE", 
			"SETQ", "DEFPARAMETER", "DEFUN", "PRINT", "FORMAT", "DOTIMES", "COND", 
			"AND", "OR", "NOT", "CAR", "CDR", "CONS", "ABS", "LOG", "GCD", "FLOOR", 
			"SIN", "SINH", "ROUND", "ICM", "T", "NIL", "LPAREN", "RPAREN", "COMMENT", 
			"MULTILINE_COMMENT", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "EQUAL", 
			"LESS", "GREATER", "SYMBOL", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lisp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LispParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LispParser.EOF, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(13);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35119951751948L) != 0)) {
				{
				{
				setState(10);
				expression();
				}
				}
				setState(15);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(16);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(LispParser.NUMBER, 0); }
		public List<TerminalNode> SYMBOL() { return getTokens(LispParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(LispParser.SYMBOL, i);
		}
		public TerminalNode STRING() { return getToken(LispParser.STRING, 0); }
		public TerminalNode WRITE_LINE() { return getToken(LispParser.WRITE_LINE, 0); }
		public TerminalNode FORMAT() { return getToken(LispParser.FORMAT, 0); }
		public TerminalNode PLUS() { return getToken(LispParser.PLUS, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode MINUS() { return getToken(LispParser.MINUS, 0); }
		public TerminalNode MULTIPLY() { return getToken(LispParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(LispParser.DIVIDE, 0); }
		public TerminalNode AND() { return getToken(LispParser.AND, 0); }
		public TerminalNode OR() { return getToken(LispParser.OR, 0); }
		public TerminalNode NOT() { return getToken(LispParser.NOT, 0); }
		public TerminalNode EQUAL() { return getToken(LispParser.EQUAL, 0); }
		public TerminalNode LESS() { return getToken(LispParser.LESS, 0); }
		public TerminalNode GREATER() { return getToken(LispParser.GREATER, 0); }
		public TerminalNode IF() { return getToken(LispParser.IF, 0); }
		public TerminalNode COND() { return getToken(LispParser.COND, 0); }
		public TerminalNode LPAREN() { return getToken(LispParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LispParser.RPAREN, 0); }
		public List<Cond_branchContext> cond_branch() {
			return getRuleContexts(Cond_branchContext.class);
		}
		public Cond_branchContext cond_branch(int i) {
			return getRuleContext(Cond_branchContext.class,i);
		}
		public TerminalNode DEFUN() { return getToken(LispParser.DEFUN, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode SETQ() { return getToken(LispParser.SETQ, 0); }
		public TerminalNode CAR() { return getToken(LispParser.CAR, 0); }
		public TerminalNode CDR() { return getToken(LispParser.CDR, 0); }
		public TerminalNode CONS() { return getToken(LispParser.CONS, 0); }
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		int _la;
		try {
			int _alt;
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBER:
				enterOuterAlt(_localctx, 1);
				{
				setState(18);
				match(NUMBER);
				}
				break;
			case SYMBOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(19);
				match(SYMBOL);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(20);
				match(STRING);
				}
				break;
			case WRITE_LINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(21);
				match(WRITE_LINE);
				setState(22);
				match(STRING);
				}
				break;
			case FORMAT:
				enterOuterAlt(_localctx, 5);
				{
				setState(23);
				match(FORMAT);
				setState(24);
				match(T__0);
				setState(25);
				match(STRING);
				setState(29);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(26);
						match(SYMBOL);
						}
						} 
					}
					setState(31);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				}
				break;
			case PLUS:
				enterOuterAlt(_localctx, 6);
				{
				setState(32);
				match(PLUS);
				setState(34); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(33);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(36); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 7);
				{
				setState(38);
				match(MINUS);
				setState(40); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(39);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(42); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case MULTIPLY:
				enterOuterAlt(_localctx, 8);
				{
				setState(44);
				match(MULTIPLY);
				setState(46); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(45);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(48); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case DIVIDE:
				enterOuterAlt(_localctx, 9);
				{
				setState(50);
				match(DIVIDE);
				setState(52); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(51);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(54); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case AND:
				enterOuterAlt(_localctx, 10);
				{
				setState(56);
				match(AND);
				setState(58); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(57);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(60); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 11);
				{
				setState(62);
				match(OR);
				setState(64); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(63);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(66); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 12);
				{
				setState(68);
				match(NOT);
				setState(69);
				expression();
				}
				break;
			case EQUAL:
				enterOuterAlt(_localctx, 13);
				{
				setState(70);
				match(EQUAL);
				setState(72); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(71);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(74); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case LESS:
				enterOuterAlt(_localctx, 14);
				{
				setState(76);
				match(LESS);
				setState(78); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(77);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(80); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case GREATER:
				enterOuterAlt(_localctx, 15);
				{
				setState(82);
				match(GREATER);
				setState(84); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(83);
						expression();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(86); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 16);
				{
				setState(88);
				match(IF);
				setState(89);
				expression();
				setState(90);
				expression();
				setState(91);
				expression();
				}
				break;
			case COND:
				enterOuterAlt(_localctx, 17);
				{
				setState(93);
				match(COND);
				setState(94);
				match(LPAREN);
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(95);
					cond_branch();
					}
					}
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==LPAREN );
				setState(100);
				match(RPAREN);
				}
				break;
			case DEFUN:
				enterOuterAlt(_localctx, 18);
				{
				setState(102);
				match(DEFUN);
				setState(103);
				match(SYMBOL);
				setState(104);
				match(LPAREN);
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SYMBOL) {
					{
					setState(105);
					parameters();
					}
				}

				setState(108);
				match(RPAREN);
				setState(109);
				expression();
				}
				break;
			case SETQ:
				enterOuterAlt(_localctx, 19);
				{
				setState(110);
				match(SETQ);
				setState(111);
				match(SYMBOL);
				setState(112);
				expression();
				}
				break;
			case CAR:
				enterOuterAlt(_localctx, 20);
				{
				setState(113);
				match(CAR);
				setState(114);
				expression();
				}
				break;
			case CDR:
				enterOuterAlt(_localctx, 21);
				{
				setState(115);
				match(CDR);
				setState(116);
				expression();
				}
				break;
			case CONS:
				enterOuterAlt(_localctx, 22);
				{
				setState(117);
				match(CONS);
				setState(118);
				expression();
				setState(119);
				expression();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 23);
				{
				setState(121);
				list();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(LispParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(LispParser.RPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(LPAREN);
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35119951751948L) != 0)) {
				{
				{
				setState(125);
				expression();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(131);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public List<TerminalNode> SYMBOL() { return getTokens(LispParser.SYMBOL); }
		public TerminalNode SYMBOL(int i) {
			return getToken(LispParser.SYMBOL, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(133);
				match(SYMBOL);
				}
				}
				setState(136); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SYMBOL );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Cond_branchContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(LispParser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(LispParser.RPAREN, 0); }
		public Cond_branchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond_branch; }
	}

	public final Cond_branchContext cond_branch() throws RecognitionException {
		Cond_branchContext _localctx = new Cond_branchContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cond_branch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(LPAREN);
			setState(139);
			expression();
			setState(140);
			expression();
			setState(141);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}